--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
     "build": "vite build",
+    "dev": "vite",
     "lint": "eslint",
     "serve": "vite preview",
     "start": "vite"
